--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
       rel="icon"
       type="image/svg+xml"
       href="https://acdn.tinkoff.ru/params/common_front/resourses/icons/favicon-32x32.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Тинькофф Образование</title>
   </head>
   <body>
+    <div class="logo"></div>
+    <div class="login-icon"></div>
+    <img src="/assets/images/frontend.png" alt="Фронтенд технологии" />
+    <h1>Frontend-разработчик</h1>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
