Best version of maket ever seen

--- a/index.html
+++ b/index.html
@@ -6,19 +6,341 @@
       rel="icon"
       type="image/svg+xml"
       href="https://acdn.tinkoff.ru/params/common_front/resourses/icons/favicon-32x32.png" />
+    <link rel="stylesheet" href="./src/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;800;900&display=swap"
       rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Тинькофф Образование</title>
   </head>
   <body>
-    <div class="logo"></div>
-    <div class="login-icon"></div>
-    <img src="/assets/images/frontend.png" alt="Фронтенд технологии" />
-    <h1>Frontend-разработчик</h1>
+    <div class="app">
+      <div class="container">
+        <header class="header">
+          <div class="header-content">
+            <div class="left_part">
+              <div class="logo"></div>
+              <div class="menu">
+                <ul>
+                  <li class="finkur">
+                    <a
+                      class="header_url"
+                      href="https://fintech.tinkoff.ru/study/fintech/frontend/"
+                      >Финтех курсы</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="header_url"
+                      href="https://fintech.tinkoff.ru/start/"
+                      >Стажировки</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="header_url"
+                      href="https://fintech.tinkoff.ru/activities/"
+                      >Мероприятия и партнерства</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="login">
+              <a
+                class="log_url"
+                href="https://www.tinkoff.ru/api/common/v1/session/authorize/?theme=default&amp;display=page&amp;origin=web%2Cib5%2Cplatform&amp;complete_uri=https%3A%2F%2Fwww.tinkoff.ru%2Fauth%2F"
+                class="ab13CRTQ_">
+                <div class="login-text">Войти</div>
+                <div class="login-button"></div>
+              </a>
+            </div>
+          </div>
+        </header>
+      </div>
+      <main>
+        <div class="container2">
+          <section class="section1">
+            <h1>Frontend-разработчик</h1>
+            <p>
+              Трехмесячный бесплатный учебный курс от Финтеха, который можно
+              проходить из любой точки России
+            </p>
+            <button onclick="window.location.href = '#anchor';" class="button1">
+              Подробнее
+            </button>
+            <img
+              class="image1"
+              src="/assets/images/frontend.png"
+              alt="Фронтенд технологии" />
+          </section>
+        </div>
+        <div class="container3">
+          <section class="section2">
+            <div class="header_wrapper">
+              <h1 heigth="48px">Кому подойдёт курс</h1>
+            </div>
+          </section>
+          <section class="section3">
+            <div class="wrapper_row3">
+              <img class="image2" src="/assets/images/image left.png" />
+              <div class="list">
+                <div class="elemList">
+                  <div class="rectangle"></div>
+                  <div class="abz">
+                    Вы студент или выпускник технических вузов
+                  </div>
+                </div>
+                <div class="elemList">
+                  <div class="rectangle"></div>
+                  <div class="abz">Хотите научиться создавать интерфейсы</div>
+                </div>
+                <div class="elemList">
+                  <div class="rectangle"></div>
+                  <div class="abz">
+                    Хотите познакомиться с современным JavaScript и его
+                    фреймворками
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div class="container4">
+          <section class="section2">
+            <div class="header_wrapper">
+              <h1>Что вас ждёт на курсе</h1>
+            </div>
+          </section>
+          <section class="section4">
+            <div class="wrapper_row4">
+              <section class="commonForm">
+                <div class="block">
+                  <div class="block__title">Основы разработки</div>
+                  <div class="abz">
+                    Делимся инструментами, которые позволяют нам создавать
+                    веб-продукты для миллионов клиентов
+                  </div>
+                </div>
+              </section>
+              <section class="commonForm">
+                <div class="block">
+                  <div class="block__title">
+                    Доступ к учебным материалам онлайн
+                  </div>
+                  <div class="abz">
+                    Онлайн-курс с лекциями и домашними заданиями. Вы можете его
+                    пройти из любой точки России
+                  </div>
+                </div>
+              </section>
+              <section class="commonForm">
+                <div class="block">
+                  <div class="block__title">Возможность попасть в команду</div>
+                  <div class="abz">
+                    Во время курса участники выполняют много практических
+                    заданий. Мы замечаем лучших и приглашаем их на собеседование
+                  </div>
+                </div>
+              </section>
+            </div>
+          </section>
+        </div>
+        <div class="container5">
+          <section class="section2">
+            <div class="header_wrapper">
+              <h1>Как строится обучение</h1>
+              <a name="“anchor”"></a>
+            </div>
+          </section>
+          <section class="section5">
+            <div class="wrapper_row5">
+              <section class="commonForm">
+                <div class="block2">
+                  <div class="block__title1">Онлайн-занятия 1 раз в неделю</div>
+                  <div class="elemList">
+                    <div class="rectangle"></div>
+                    <div class="abz1">
+                      Курс стартует в середине февраля и длится три месяца
+                    </div>
+                  </div>
+                  <div class="elemList">
+                    <div class="rectangle"></div>
+                    <div class="abz1">
+                      В неделю будете тратить около 2-3 часов на лекции и
+                      столько, сколько сочтёте нужным, на домашнюю работу
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <section class="commonForm">
+                <div class="block2">
+                  <div class="block__title1">Интерактив и нетворкинг</div>
+                  <div class="elemList">
+                    <div class="rectangle"></div>
+                    <div class="abz1">
+                      Вы сможете задавать вопросы преподавателям во время лекции
+                      в Зуме или в общем чате
+                    </div>
+                  </div>
+                  <div class="elemList">
+                    <div class="rectangle"></div>
+                    <div class="abz1">
+                      Обсуждать материалы и домашки вместе с сокурсниками. Это
+                      поможет найти новый профессиональный круг общения
+                    </div>
+                  </div>
+                </div>
+              </section>
+            </div>
+          </section>
+        </div>
+        <div class="container6">
+          <section class="section2">
+            <div class="header_wrapper">
+              <h1>Бесплатное обучение</h1>
+            </div>
+          </section>
+          <section class="section6">
+            <div class="wrapper_row6">
+              <section class="commonForm">
+                <div class="block1">
+                  <img
+                    class="image3"
+                    src="/assets/icons/academic.svg"
+                    alt="Фронтенд технологии" />
+                  <div class="block_doc">
+                    <div class="block__title1">
+                      Каждый студент проходит тщательный отбор
+                    </div>
+                    <div class="elemList">
+                      <div class="rectangle"></div>
+                      <div class="abz1">
+                        Пройдите экзамен и заполните анкету, которая выполняет
+                        функцию портфолио
+                      </div>
+                    </div>
+                    <div class="elemList">
+                      <div class="rectangle"></div>
+                      <div class="abz1">
+                        Расскажите подробно о своём опыте: сильное портфолио
+                        влияет на решение
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <section class="commonForm">
+                <div class="block1">
+                  <img
+                    class="image3"
+                    src="/assets/icons/doc.svg"
+                    alt="Фронтенд технологии" />
+                  <div class="block_doc">
+                    <div class="block__title1">Одинаковые условия для всех</div>
+                    <div class="elemList">
+                      <div class="rectangle"></div>
+                      <div class="abz1">
+                        Чтобы успешно закончить курс, нужно выполнить
+                        обязательные домашние задания и защитить проект
+                      </div>
+                    </div>
+                    <div class="elemList">
+                      <div class="rectangle"></div>
+                      <div class="abz1">
+                        После обучения выдаём сертификат, подтверждающий, что вы
+                        освоили теории и навыки веб-разработки
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+            </div>
+          </section>
+        </div>
+        <div class="container7">
+          <section class="section2">
+            <div class="header_wrapper">
+              <h1>Как попасть на курс</h1>
+            </div>
+          </section>
+          <section class="section7">
+            <div class="wrapper_row7">
+              <section class="block_last">
+                <div class="black_migration">
+                  <div class="black"><div class="number">1</div></div>
+                </div>
+                <div class="block_wrapper">
+                  <div class="block_last1">
+                    <div class="abz2">
+                      Оставьте заявку онлайн и зарегистрируйтесь на сайте
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <section class="block_last">
+                <div class="black_migration">
+                  <div class="black"><div class="number">2</div></div>
+                </div>
+                <div class="block_wrapper">
+                  <div class="block_last1">
+                    <div class="abz2">
+                      Расскажите в анкете, почему хотите изучить веб-разработку
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <section class="block_last">
+                <div class="black_migration">
+                  <div class="black"><div class="number">3</div></div>
+                </div>
+                <div class="block_wrapper">
+                  <div class="block_last1">
+                    <div class="abz2">
+                      Пройдите экзамен: решите несколько задач по
+                      программированию
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <section class="block_last">
+                <div class="black_migration">
+                  <div class="black"><div class="number">4</div></div>
+                </div>
+                <div class="block_wrapper">
+                  <div class="block_last1">
+                    <div class="abz2">
+                      Дождитесь письма об итогах отбора. Начните учиться
+                    </div>
+                  </div>
+                </div>
+              </section>
+            </div>
+          </section>
+        </div>
+        <footer>
+          <div class="container8">
+            <section class="section8">
+              <div class="footer">
+                <div class="copyright">
+                  <span>© 2022 «Тинькофф Образование»</span>
+                </div>
+                <div class="contact">
+                  <address class="contact__address">
+                    <span>По вопросам пишите на&nbsp;</span>
+                    <div class="colour">
+                      <a href="mailto:edu@tinkoff.ru">edu@tinkoff.ru</a>
+                    </div>
+                  </address>
+                </div>
+              </div>
+            </section>
+          </div>
+        </footer>
+      </main>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
