--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </div>
                 </div>
 
-                <div class="wrapper row">
+                <div class=" row">
                     <section class="col col_md-6 col_sm-12 col_xs-12">
                         <div class="block">
                             <h4 class="block__title">
@@ -204,7 +204,7 @@
 
                     <section class="col col_md-6 col_sm-12 col_xs-12">
                         <div class="block">
-                            <img src="/assets/icons/sheet-academic.svg" alt="cap-academic" class="icon">
+                            <img src="./assets/icons/cap-academic.png" alt="cap-academic" class="icon">
                             <h4 class="block__title">Каждый студент проходит тщательный отбор</h4>
                             <p class="block__info">
                             <ul class="list">
@@ -220,7 +220,7 @@
 
                     <section class="col col_md-6 col_sm-12 col_xs-12">
                         <div class="block">
-                            <img src="/assets/icons/sheet-academic.svg"  alt="sheet" class="icon" >
+                            <img src="/assets/icons/sheet-academic.png"  alt="sheet" class="icon" >
                             <h4 class="block__title">
                                 Одинаковые условия для всех
                             </h4>
