--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
       rel="stylesheet" />
+    <link rel="stylesheet" href="index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Тинькофф Образование</title>
   </head>
   <body>
-    <div class="logo"></div>
-    <div class="login-icon"></div>
-    <img src="/assets/images/frontend.png" alt="Фронтенд технологии" />
-    <h1>Frontend-разработчик</h1>
-    <script type="module" src="./main.js"></script>
+    <div class="app">
+      <header class="header">
+        <div class="container">
+          <div class="header-content">
+            <div class="logo"></div>
+          </div>
+        </div>
+      </header>
+    </div>
   </body>
 </html>
