--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
         <div class="container">
           <div class="header-content">
             <div class="logo"></div>
+            <nav class="navigation"></nav>
+            <ul class="navList">
+              <li class="navLink navLinkActive">
+                <a href="https://fintech.tinkoff.ru/study/fintech/frontend/"
+                  >Финтех курсы</a
+                >
+              </li>
+              <li class="navLink">
+                <a href="https://fintech.tinkoff.ru/start/">Стажировки</a>
+              </li>
+              <li>
+                <a href="https://fintech.tinkoff.ru/activities/"
+                  >Мероприятия и партнёрства</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </header>
