--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="site-header">
         <div class="container">
             <div class="logo">
-                <img src="t_picture1.png" alt="Логотип">
+                <img src="https://www.cdn-tinkoff.ru/frontend-libraries/pfcore-static-assets/logos/main-logo.svg" alt="Логотип">
             </div>
             <nav class="main-nav">
                 <ul>
@@ -32,7 +32,7 @@
             <button class="details-btn">Подробнее</button>
         </div>
         <div class="image-container">
-            <img src="t_picture2.png" alt="Frontend Development Illustration">
+            <img src="assets/images/frontend.png" alt="Frontend Development Illustration">
         </div>
     </main>
 
@@ -40,7 +40,7 @@
         <h2>Кому подойдет курс</h2>
         <div class="content-wrapper">
             <div class="image-container2">
-                <img src="t_picture3.png" alt="Компьютер и книги">
+                <img src="assets/images/about-course-720.png" alt="Компьютер и книги">
             </div>
             <div class="text-container">
                 <ul>
@@ -96,7 +96,7 @@
         <div class="card-group">
             <div class="card">
                 <div class="icon">
-                    <img src="t_picture4.png" alt="Компьютер и книги">
+                    <img src="assets/icons/academic.svg" alt="Компьютер и книги">
                 </div>
                 <h2>Каждый студент проходит тщательный отбор</h2>
                 <ul>
@@ -106,7 +106,7 @@
             </div>
             <div class="card">
                 <div class="icon">
-                    <img src="t_picture5.png" alt="Компьютер и книги">
+                    <img src="assets/icons/doc.svg" alt="Компьютер и книги">
                 </div>
                 <h2>Одинаковые условия для всех</h2>
                 <ul>
