--- a/index.html
+++ b/index.html
@@ -15,10 +15,215 @@
     <title>Тинькофф Образование</title>
   </head>
   <body>
-    <div class="logo"></div>
-    <div class="login-icon"></div>
-    <img src="/assets/images/frontend.png" alt="Фронтенд технологии" />
-    <h1>Frontend-разработчик</h1>
+    <header class="header">
+      <div class="headerbox">
+        <div class="headerelementsbox">
+          <div class="headerelements">
+            <div class="logo-box">
+              <div class="logo"></div>
+            </div>
+            <div class="elements-box">
+              <nav class="elements">
+                <span class="element">
+                  <a class="item" href="#">Финтех курсы</a>
+                </span>
+                <span class="element">
+                  <a class="item" href="#">Стажировки</a>
+                </span>
+                <span class="element">
+                  <a class="item" href="#">Мероприятия и партнерства</a>
+                </span>
+              </nav>
+            </div>
+            <div class="input-box">
+              <a href="#" class="input">
+                <span class="input-text">
+                  Войти
+                </span>
+                <svg class="login-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M10.4674 4.49769C10.5238 4.27849 10.5779 4.21386 10.6862 4.08461C10.9595 3.75817 11.3053 3.48953 11.6801 3.30592C12.3045 3 13.1163 3 14.7399 3H16.2599C17.8835 3 18.6952 3 19.3197 3.30592C19.9176 3.59882 20.4011 4.08229 20.694 4.68018C20.9999 5.30464 20.9999 6.11642 20.9999 7.74V16.26C20.9999 17.8836 20.9999 18.6954 20.694 19.3198C20.4011 19.9177 19.9176 20.4012 19.3197 20.6941C18.6952 21 17.8835 21 16.2599 21H14.7399C13.1163 21 12.3045 21 11.6801 20.6941C11.3053 20.5105 10.9595 20.2418 10.6862 19.9154C10.5779 19.7861 10.5238 19.7215 10.4674 19.5023C10.4271 19.3459 10.4501 19.0195 10.512 18.8702C10.5986 18.6611 10.7155 18.556 10.9491 18.3457L17.174 12.7433C17.6154 12.346 17.6154 11.6539 17.174 11.2567L10.9491 5.65434C10.7155 5.44402 10.5986 5.33886 10.512 5.12976C10.4501 4.98051 10.4271 4.65414 10.4674 4.49769ZM14.5 12C14.5 11.5899 14.253 11.2374 13.8997 11.0831L10.6402 8.36687C9.98886 7.8241 9 8.28725 9 9.13509V11L3 11.0001C2.44771 11.0001 2 11.4478 2 12.0001C2 12.5523 2.44772 13.0001 3 13.0001L9 13V14.865C9 15.7128 9.98886 16.176 10.6402 15.6332L13.8997 12.917C14.253 12.7627 14.5 12.4102 14.5 12Z"/>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="content add_content1">
+      <div class="title-box">
+        <p class="title text">Frontend-разработчик</p>
+      </div>
+      <div class="subtitle-box">
+        <p class="subtitle text">Трехмесячный бесплатный учебный курс от Финтеха, который можно проходить из любой точки России</p>
+      </div>
+      <div class="button-box">
+        <button class="button">
+          <span class="text subtitle">Подробнее</span>
+        </button>
+      </div>
+      <img class="frontend-img" src="/assets/images/frontend.png" alt="Фронтенд технологии" />
+    </div>
+    <div class="content add_content2">
+      <div class="title-box title_box_add">
+        <span class="title text">Кому подойдет курс</span>
+      </div>
+      <div class="about">
+        <div class="content-box">
+          <img src="assets/images/about-course-720.png" class="about-course">
+          <div class="about-items">
+            <ul >
+              <li class="text subtitle add_subtitle">Вы студент или выпускник технических вузов</li>
+              <li class="text subtitle add_subtitle">Хотите научиться создавать интерфейсы</li>
+              <li class="text subtitle add_subtitle">Хотите познакомиться с современным JavaScript и его фреймворками</li>
+              <li class="text subtitle add_subtitle">Вы сладкая булочка</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      <div class="title-box title_box_add">
+        <p class="title text">Что вас ждет на курсе</p>
+      </div>
+      <div class="blocks blocks_content3">
+        <div class="block block_content3">
+          <div class="data data_add_content3">
+            <span class="data-title text">Основы разработки</span>
+            <span class="data-text text">Делимся инструментами, которые позволяют нам создавать <br/>веб-продукты для миллионов клиентов</span>
+          </div>
+        </div>
+        <div class="block block_content3">
+          <div class="data data_add_content3">
+            <span class="data-title text">Доступ к учебным материалам онлайн</span>
+            <span class="data-text text">Онлайн-курс с лекциями <br/>и домашними заданиями. Вы можете его пройти из любой точки России</span>
+          </div>
+        </div>
+        <div class="block block_content3">
+          <div class="data data_add_content3">
+            <span class="data-title text">Возможность попасть <br/>в команду</span>
+            <span class="data-text text">Во время курса участники выполняют много практических заданий. <br/>Мы замечаем лучших и приглашаем <br/>их на собеседование</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      <div class="title-box title_box_add">
+        <span class="title text">Как строится обучение</span>
+      </div>
+      <div class="blocks blocks_content4">
+        <div class="block">
+          <div class="data data_add_content4">
+            <span class="data-title text">Онлайн-занятия 1 раз в неделю</span>
+            <div class="list">
+              <li class="text subtitle add_subtitle">Курс стартует в середине февраля и длится три месяца</li>
+              <li class="text subtitle add_subtitle">В неделю будете тратить около 2-3 часов на лекции и столько, сколько сочтете нужным, на домашнюю работу</li>
+            </div>
+          </div>
+        </div>
+        <div class="block">
+          <div class="data data_add_content4">
+            <span class="data-title text">Интерактив и нетворкинг</span>
+            <div class="list">
+              <li class="text subtitle add_subtitle">Вы сможете задавать вопросы преподавателям во время лекции в Зуме или в общем чате</li>
+              <li class="text subtitle add_subtitle">Обсуждать материалы и домашки вместе с сокурсниками. <br>Это поможет найти новый профессиональный круг общения</li>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      <div class="title-box title_box_add">
+        <span class="title text">Бесплатное обучение</span>
+      </div>
+      <div class="blocks blocks_content5">
+        <div class="block">
+          <div class="data data_add_content5">
+            <div class="block_image_box">
+              <img src="/assets/icons/academic.svg">
+            </div>
+            <span class="data-title text">Каждый студент проходит тщательный отбор</span>
+            <div class="list">
+              <li class="text subtitle add_subtitle">Пройдите экзамен и заполните анкету, которая выполняет функцию портфолио</li>
+              <li class="text subtitle add_subtitle">Расскажите подробно о своем опыте: сильное портфолио влияет на решение</li>
+            </div>
+          </div>
+        </div>
+        <div class="block">
+          <div class="data data_add_content5">
+            <div class="block_image_box">
+              <img src="/assets/icons/doc.svg">
+            </div>
+            <span class="data-title text">Одинаковые условия для всех</span>
+            <div class="list">
+              <li class="text subtitle add_subtitle">Чтобы успешно закончить курс, нужно выполнить обязательные домашние задания и защитить проект</li>
+              <li class="text subtitle add_subtitle">После обучения выдаем сертификат, подтверждающий,<br>что вы освоили теорию и навыки веб-разработки</li>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      <div class="title-box title_box_add">
+        <span class="title text">Как попасть на курс</span>
+      </div>
+      <div class="blocks blocks_content6">
+        <div class="box_block_content6">
+          <div class="number_box">
+            <span class="number">1</span>
+          </div>
+          <div class="block block_add_content6">
+            <div class="data data_add_content6">
+              <span class="data-text text text_center">Оставьте заявку онлайн <br>и зарегистрируйтесь <br>на сайте</span>
+            </div>
+          </div>
+        </div>
+        <div class="box_block_content6">
+          <div class="number_box">
+            <span class="number">2</span>
+          </div>
+          <div class="block block_add_content6">
+            <div class="data data_add_content6">
+              <span class="data-text text text_center">Расскажите в анкете, почему хотите изучить веб-разработку</span>
+            </div>
+          </div>
+        </div>
+        <div class="box_block_content6">
+          <div class="number_box">
+            <span class="number">3</span>
+          </div>
+          <div class="block block_add_content6">
+            <div class="data data_add_content6">
+              <span class="data-text text text_center">Пройдите экзамен: решите несколько задач по программированию </span>
+            </div>
+          </div>
+        </div>
+        <div class="box_block_content6">
+          <div class="number_box">
+            <span class="number">4</span>
+          </div>
+          <div class="block block_add_content6">
+            <div class="data data_add_content6">
+              <span class="data-text text text_center">Дождитесь письма <br>об итогах отбора. Начните учиться</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-box">
+      <div class="footer-blocks">
+        <div class="footer">
+          <div class="line_box"></div>
+          <div class="text_box">
+            <div class="text_box1">
+              <span class="footer_text">© 2022 «Тинькофф Образование»</span>
+            </div>
+            <div class="text_box2">
+              <span class="footer_text right">По вопросам пишите на <a href="">edu@tinkoff.ru</a></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
